@@ -217,7 +217,7 @@ void QwtPlotTextLabel::draw( QPainter *painter,
         pixmapRect.setBottom( qCeil( rect.bottom() ) + pw );
         
 #if QT_VERSION >= 0x050000
-        const qreal pixelRatio = painter->device()->devicePixelRatio();
+        const qreal pixelRatio = QwtPainter::devicePixelRatio( painter->device() );
         const QSize scaledSize = pixmapRect.size() * pixelRatio;
 #else
         const QSize scaledSize = pixmapRect.size();
